Update import / export preferences - Simplify the alerts - Add import wayfarer json, for #26

--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -111,30 +111,34 @@
 
 // Preferences
 "view.preferences.general"  = "General";
-"view.preferences.google"   = "Google";
-"view.preferences.data"     = "Data";
 "view.preferences.general.refreshOnOpen"    = "Refresh On Open";
 "view.preferences.general.backgroundRefresh"    = "Background Refresh (Requires Widget)";
 "view.preferences.general.queryAfterLatest" = "Query After Latest";
+"view.preferences.google"   = "Google";
 "view.preferences.google.account"   = "Google Account";
-"view.preferences.google.link"      = "Link";
+"view.preferences.google.link"  = "Link";
 "view.preferences.google.unlink"    = "Unlink";
 "view.preferences.google.linked"    = "Linked";
 "view.preferences.google.notLinked" = "Not Linked";
-"view.preferences.google.sync"      = "Sync with Google Drive";
+"view.preferences.google.sync"  = "Sync with Google Drive";
 "view.preferences.google.syncNow"   = "Sync Now";
 "view.preferences.google.uploadNow" = "Upload Now";
 "view.preferences.google.migrate"   = "Migrate Data";
-"view.preferences.google.migrate.alert"   = "Some reasons might be lost during migrating, it's highly recommended to refresh before migrate.";
+"view.preferences.google.migrate.alert" = "Some reasons might be lost during migrating, it's highly recommended to refresh before migrate.";
 "view.preferences.google.migrate.alert.confirm" = "Migrate";
 "view.preferences.google.migrate.finished %lld" = "Migrated %lld nominations.";
+"view.preferences.data" = "Data";
 "view.preferences.data.importExport"    = "Import / Export";
-"view.preferences.data.importNominations"  = "Import Nominations";
-"view.preferences.data.importNominations.success %lld"   = "Imported %lld nominations";
-"view.preferences.data.importNominations.failure %@"  = "Error occured when import: %@";
-"view.preferences.data.exportNominations"  = "Export Nominations";
-"view.preferences.data.exportNominations.success"   = "Exported";
-"view.preferences.data.exportNominations.failure %@"  = "Error occured when export: %@";
+"view.preferences.data.import" = "Import";
+"view.preferences.data.export" = "Export";
+"view.preferences.data.nominations" = "Nominations";
+"view.preferences.data.nominations.failure %@"  = "Error occured: %@";
+"view.preferences.data.nominations.import.success %lld"   = "Imported %lld nominations.";
+"view.preferences.data.nominations.export.success"  = "Exported";
+"view.preferences.data.wayfarer"    = "Wayfarer JSON";
+"view.preferences.data.wayfarer.link"   = "Open Wayfarer API";
+"view.preferences.data.wayfarer.import.empty"   = "Pasteboard is empty.";
+"view.preferences.data.wayfarer.import.success %lld"  = "Uplated %lld nominations.";
 "view.preferences.data.clearNominations"        = "Clear Nominations";
 "view.preferences.data.clearNominations.alert"  = "You can not undo this operation.";
 "view.preferences.data.clearNominations.clear"  = "Clear";
