--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -111,30 +111,34 @@
 
 // Preferences
 "view.preferences.general"  = "一般";
-"view.preferences.google"   = "Google";
-"view.preferences.data"     = "数据";
 "view.preferences.general.refreshOnOpen"    = "打开时刷新";
 "view.preferences.general.backgroundRefresh"    = "背景刷新（需要小组件）";
 "view.preferences.general.queryAfterLatest" = "仅查询最新邮件";
+"view.preferences.google"   = "Google";
 "view.preferences.google.account"   = "Google账号";
-"view.preferences.google.link"      = "连接";
+"view.preferences.google.link"  = "连接";
 "view.preferences.google.unlink"    = "取消连接";
 "view.preferences.google.linked"    = "已连接";
 "view.preferences.google.notLinked" = "未连接";
-"view.preferences.google.sync"      = "同步Google硬盘";
+"view.preferences.google.sync"  = "同步Google硬盘";
 "view.preferences.google.syncNow"   = "现在同步";
 "view.preferences.google.uploadNow" = "现在上传";
 "view.preferences.google.migrate"   = "迁移数据";
 "view.preferences.google.migrate.alert"   = "迁移数据可能会丢弃部分拒绝理由，建议您在迁移前刷新一次。";
 "view.preferences.google.migrate.alert.confirm" = "迁移";
 "view.preferences.google.migrate.finished %lld" = "迁移了%lld个提名。";
+"view.preferences.data" = "数据";
 "view.preferences.data.importExport"    = "导入 / 导出";
-"view.preferences.data.importNominations"  = "导入提名";
-"view.preferences.data.importNominations.success %lld"   = "导入%lld个提名";
-"view.preferences.data.importNominations.failure %@"  = "导入时发生错误：%@";
-"view.preferences.data.exportNominations"  = "导出提名";
-"view.preferences.data.exportNominations.success"   = "导出完成";
-"view.preferences.data.exportNominations.failure %@"  = "导出时发生错误：%@";
+"view.preferences.data.import" = "导入";
+"view.preferences.data.export" = "导出";
+"view.preferences.data.nominations" = "提名";
+"view.preferences.data.nominations.failure %@"  = "发生错误：%@";
+"view.preferences.data.nominations.import.success %lld" = "导入%lld个提名。";
+"view.preferences.data.nominations.export.success"  = "导出完成";
+"view.preferences.data.wayfarer"    = "Wayfarer JSON";
+"view.preferences.data.wayfarer.link"   = "打开Wayfarer API";
+"view.preferences.data.wayfarer.import.empty"   = "剪贴板是空的。";
+"view.preferences.data.wayfarer.import.success %lld"  = "更新了%lld个提名。";
 "view.preferences.data.clearNominations"        = "清空提名";
 "view.preferences.data.clearNominations.alert"  = "您无法撤回此操作。";
 "view.preferences.data.clearNominations.clear"  = "清空";
