--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -97,6 +97,7 @@
 "view.details.location.hint" = "纬度,经度";
 "view.details.location.invalid" = "无效";
 "view.details.location.paste"   = "粘贴Intel地图链接";
+"view.details.location.brainstorming"   = "查询Brainstorming";
 
 // RemoteImage
 "view.image.open"   = "打开";
