--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -168,6 +168,8 @@
 "notification.refresh.refreshFinished.desc" = "更新了%d个提名。";
 
 // Widget
+"widget.highlights" = "要点";
+"widget.highlights.desc"    = "展示提名数量";
 "widget.nomination" = "提名";
 "widget.nomination.desc"    = "随机展示一个提名。";
 "widget.nomination.empty"   = "没有提名";
