--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -85,6 +85,7 @@
 "view.details.edit" = "Edit";
 "view.details.save" = "Save";
 "view.details.cancel"   = "Cancel";
+"view.details.dismiss"  = "Dismiss";
 "view.details.hightlights"  = "Highlights";
 "view.details.confirmed"    = "Confirmed";
 "view.details.status"   = "Status";
