Add UNPasteboard - Add UNPasteboard.string for macOS - Add NominationDetails.setLngLatFromPasteboard() - Push alert when pasteboard is empty or text is invalid

--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -103,6 +103,9 @@
 "view.details.location.hint"    = "Latitude,Longitude";
 "view.details.location.invalid" = "Invalid";
 "view.details.location.paste"   = "Paste Intel Maps URL";
+"view.details.location.paste.empty" = "Pasteboard Is Empty";
+"view.details.location.paste.invalid"   = "Invalid Text";
+"view.details.location.paste.invalid.desc"  = "The text is not a valid Intel Maps URL or does not contain a location.";
 "view.details.location.brainstorming"   = "Query Brainstorming";
 "view.details.location.brainstorming.failed"    = "Query Failed";
 "view.details.location.brainstorming.failed.desc"   = "Unable to connect to Firebase or no record found.";
