--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -56,6 +56,7 @@
 
 /* View */
 // Common Actions
+"action.open" = "打开";
 "action.dismiss" = "关闭";
 
 // Navigation
@@ -88,7 +89,6 @@
 "view.details.edit" = "编辑";
 "view.details.save" = "保存";
 "view.details.cancel"   = "取消";
-"view.details.image.open"   = "打开";
 "view.details.image.copy"   = "拷贝";
 "view.details.image.share"  = "分享";
 "view.details.hightlights"  = "要点";
