--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -14,6 +14,8 @@
 "data.undeclared" = "未指明";
 "data.duplicated" = "重复";
 "data.close"    = "过近";
+"data.cultural" = "文化";
+"data.niantic"  = "Niantic";
 
 "data.criteriaBodypart" = "身体部位";
 "data.criteriaCriteria" = "其它";
